Fixed the font sizing of session names and added letter spacing for the shutdown labels

--- a/src/running/index.css
+++ b/src/running/index.css
@@ -135,6 +135,7 @@
 
 
 .jp-RunningSessions-itemLabel {
+  font-size: var(--jp-ui-font-size1);
   flex: 1 1 auto;
   margin-right: 4px;
   text-overflow: ellipsis;
@@ -152,4 +153,5 @@
   cursor: pointer;
   height: var(--jp-private-running-shutdown-button-height);
   line-height: var(--jp-private-running-shutdown-button-height);
+  letter-spacing: .8px;
 }
